@@ -1,0 +1,2 @@
+WARNING: closed input source: object 2/0: error reading object: QPDF operation attempted after closing input source
+test 73 done
